# multi_robot_ws

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/explore_lite/include/explore/: costmap_client.h  costmap_tools.h  explore.h  frontier_search.h
install/explore_lite/lib/explore_lite/: explore
install/explore_lite/share/explore_lite/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/explore_lite/share/explore_lite/cmake/: ament_cmake_export_include_directories-extras.cmake  explore_liteConfig-version.cmake  explore_liteConfig.cmake
install/explore_lite/share/explore_lite/config/: params.yaml  params_costmap.yaml  robot1_explore_params.yaml
install/explore_lite/share/explore_lite/environment/: ament_prefix_path.dsv  path.dsv
install/explore_lite/share/explore_lite/launch/: explore.launch.py  robot1_explore.launch.py  robot2_explore.launch.py
install/merge_map/lib/merge_map/: merge_map
install/merge_map/share/merge_map/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/merge_map/share/merge_map/config/: merge_map.rviz
install/merge_map/share/merge_map/launch/: merge_map_launch.py
install/multirobot_map_merge/include/map_merge/: map_merge.h  ros1_names.hpp
install/multirobot_map_merge/lib/multirobot_map_merge/: map_merge
install/multirobot_map_merge/share/multirobot_map_merge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/multirobot_map_merge/share/multirobot_map_merge/cmake/: ament_cmake_export_include_directories-extras.cmake  (+3 more)
log/: latest_build
src/explore/: CMakeLists.txt
src/explore/config/: params.yaml  robot1_explore_params.yaml
src/explore/include/explore/: costmap_client.h  costmap_tools.h  explore.h  frontier_search.h
src/explore/launch/: robot1_explore.launch.py  robot2_explore.launch.py
src/explore/src/: costmap_client.cpp  explore.cpp  frontier_search.cpp
src/merge_map/: package.xml  setup.py
src/merge_map/config/: merge_map.rviz
src/merge_map/launch/: merge_map_launch.py
src/multirobot_map_merge/: CMakeLists.txt
src/multirobot_map_merge/launch/tb3_simulation/: bringup_launch.py  multi_tb3_simulation_launch.py  tb3_simulation_launch.py
src/multirobot_map_merge/launch/tb3_simulation/config/: nav2_multirobot_params_1.yaml
src/multirobot_map_merge/maps/: map1.pgm  map1.yaml  map2.pgm  map2.yaml
src/multirobot_map_merge/src/: map_merge.cpp
src/multirobot_map_merge/src/combine_grids/: estimation_internal.h  grid_compositor.cpp  grid_warper.cpp  merging_pipeline.cpp
(+14 files in other folders)
